# RevCoreInit-Libbed

./: gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
rev-gen-lib-pers/: CMakeLists.txt  build.gradle  gradle.properties
rev-gen-lib-pers/src/main/: AndroidManifest.xml
rev-gen-lib-pers/src/main/cpp/: sqlite3-native-lib.cpp
rev-gen-lib-pers/src/main/jni/: hello-libs.cpp  rev-pers-lib-create.cpp  rev_annotation_jni_loader.cpp
rev-lib-core-app-plugins/: build.gradle  proguard-rules.pro
rev-lib-core-app-plugins/src/main/: AndroidManifest.xml
rev-lib-core-views/: build.gradle
rev-lib-core-views/src/main/: AndroidManifest.xml
rev-lib-gen-functions/: build.gradle
rev-lib-gen-functions/src/main/: AndroidManifest.xml
rev-lib-persistence/: build.gradle
rev-lib-persistence/src/main/: AndroidManifest.xml
rev-lib-plugin-loader/: build.gradle
rev-lib-plugin-loader/src/main/: AndroidManifest.xml
rev-lib-views/: build.gradle
rev-lib-views/src/main/: AndroidManifest.xml
rev_core_init/: build.gradle
rev_core_init/src/main/: AndroidManifest.xml
rev_v8/: CMakeLists.txt  build.gradle
rev_v8/libs/include/: mallocdebug.h  node_object_wrap.h
rev_v8/src/androidTest/java/rev/ca/rev_v8/: ExampleInstrumentedTest.java
rev_v8/src/main/: AndroidManifest.xml
rev_v8/src/main/cpp/: native-lib.cpp  rev-shell.cpp  rev-shell.h
rev_v8/src/main/java/rev/ca/rev_v8/: RevNativeLibWrapper.java
rev_v8/src/main/res/values/: strings.xml
rev_v8/src/test/java/rev/ca/rev_v8/: ExampleUnitTest.java
(+391 files in other folders)
